<resources>
    <!--Google Map Api Key-->
    <string name="google_map_api_key">AIzaSyAHyfj5ONi_s0pQcau5e0NCzHkkMPFQ7hg</string>
    <!-- Login and Registration -->
    <string name="app_name">IntelliGuide</string>
    <string name="welcome">Welcome to IntelliGuide</string>
    <string name="login">Login</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="sample_email">Sample@gmail.com</string>
    <string name="sample_password">**********</string>
    <string name="signin">Sign In</string>
    <string name="or">Or</string>
    <string name="noAccount">No account?</string>
    <string name="singup">Sign Up</string>
    <string name="user_type">Select your user type</string>
    <string name="tourist1">Guide your self</string>
    <string name="tourist2">Discover foods</string>
    <string name="tourist3">Ensure safety</string>
    <string name="tourist4">Share Experience</string>
    <string name="resurent1">Add your Restaurant</string>
    <string name="resurent2">Add events</string>
    <string name="resurent3">Add menu</string>
    <string name="police1">Only for police officers</string>
    <string name="police2">View ongoing cases</string>
    <string name="police3">View case location</string>
    <string name="register">Register</string>
    <string name="tourist">Tourist</string>
    <string name="name">Name</string>
    <string name="name_hint">John</string>
    <string name="age">Age</string>
    <string name="age_hint">21</string>
    <string name="country">Country</string>
    <string name="country_hint">USA</string>
    <string name="pass_no">Passport Number</string>
    <string name="pass_hint">Eu*********</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="contact_no">Contact Number</string>
    <string name="contact_hint">+94714563778</string>
    <string name="have_account">Have a Account</string>
    <string name="TPoliceRegTitle">Tourist Police</string>

    <!--Hotel Owner-->
    <!--Hotel Owner Registration-->
    <string name="HotelOwnerRegTitle">Hotel Owner</string>
    <string name="HotelOwnerRegHotelName">Hotel Name</string>
    <string name="HotelOwnerRegHotelNameHint">Beach Inns Hotel</string>
    <string name="HotelOwnerRegHotelAddress">Hotel Address</string>
    <string name="HotelOwnerRegHotelAddressHint">Beach Inns, Beach Rd, Matara</string>
    <string name="HotelOwnerRegHotelLongitude">Longitude Coordinates</string>
    <string name="HotelOwnerRegHotelLongitudeHint">6.9264384</string>
    <string name="HotelOwnerRegHotelLatitude">Latitude Coordinates</string>
    <string name="HotelOwnerRegHotelLatitudeHint">79.9727158</string>

    <!--Hotel Owner Add Events-->
    <string name="HotelOwnerAddEventTitle">Add Event</string>
    <string name="HotelOwnerOrganizerName">Organizer Name</string>
    <string name="HotelOwnerOrganizerContact">Contact Number</string>
    <string name="HotelOwnerEventLocation">Location</string>
    <string name="HotelOwnerEventDate">DD-MM-YY</string>
    <string name="HotelOwnerEventTime">00-00</string>

    <!--Hotel Owner Add Ads-->
    <!--Hotel Owner Add Ads-->
    <string name="HotelOwnerAdSuccess">Ad Successfully Added</string>
    <string name="HotelOwnerAddAdTitle">Place Your Ad</string>
    <string name="HotelOwnerAddAdName">Ad Name</string>
    <string name="HotelOwnerAddAdText1">Image:</string>
    <string name="HotelOwnerAddAdText2">Select Image</string>
    <string name="HotelOwnerAddAdText3">Price: Rs. 250 per week</string>
    <string name="HotelOwnerAddAdText4">Dimensions: 800px * 100px</string>
    <string name="HotelOwnerAddAdText5">Publish</string>
    <string name="HotelOwnerAddAdPaymentCrdNo">Card Number</string>
    <string name="HotelOwnerAddAdPaymentCrdNoHint">XXXX-XXXX-XXXX-XXXX</string>
    <string name="HotelOwnerAddAdPaymentExpDate">Expiry Date</string>
    <string name="HotelOwnerAddAdPaymentExpDateHint">09/28</string>
    <string name="HotelOwnerAddAdPaymentCVV">CVV</string>
    <string name="HotelOwnerAddAdPaymentCVVHint">XXX</string>
    <string name="HotelOwnerAddAdPaymentBtn">Pay</string>

    <!--Tourist Police-->
    <string name="TPoliceTitle">Tourist Police</string>
    <string name="TPoliceName">Name</string>
    <string name="TPoliceBtn1">View Alert</string>
    <string name="TPoliceBtn2">Log Out</string>
    <string name="TPoliceId">Police ID</string>
    <string name="TPoliceStation">Allocated Station</string>
    <string name="TPoliceIdHint">XXXXXXXXX</string>
    <string name="TPoliceStationHint">Allocated Station</string>

    <!-- Tourist -->
    <string name="TouristAddScams">Add Scams</string>
    <string name="TouristAddPlace">Add New Places</string>
    <string name="TouristProfileTitle">Tourist</string>
    <string name="TouristProfileCName">Country: </string>
    <string name="TouristProfilePass">Passport Number:  </string>
    <string name="TouristProfileAge">Age:  </string>
    <string name="TouristProfilebtn">Saved</string>
    <string name="TouristProfileBtn2">My Posts</string>
    <string name="TouristSocialMediaScams">Scams</string>
    <string name="TouristSocialMediaReviews">Reviews</string>
    <string name="TouristSocialMediaPlace">Places</string>

    <!-- Ai ChatBot -->
    <string name="destinationTitle">Destination Interactions</string>
    <string name="arrived">You Arrived at </string>
    <string name="Rate_destination">Rate Destination</string>
    <string name="askQuestions">Ask Questions from AI</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="AlertMiss">Alerted by mistakenly,no worries,Stop Alert</string>

    <string name="Direction">Get Direction</string>

    <string name="add_new_place">"Add New Place "</string>
    <string name="samplePlace">Sigiriya</string>
    <string name="description">Description</string>
    <string name="addPost">Add Post</string>

</resources>